added a handler update
